update customer tdee records

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,14 @@ DB_URL=
 DB_USERNAME=
 DB_PASSWORD=
 API_KEY=
-JWT_SECRET=
-JWT_EXPIRATION_MS=
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRATION_MS=
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRATION_MS=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_HOST=
+MAIL_PORT=
+FRONTEND_URL=
+OPENAI_API_KEY=
+OPENAI_MODEL=
