--- a/build.gradle
+++ b/build.gradle
@@ -73,3 +73,8 @@ implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+// Ensure parameter names are preserved for Spring framework
+tasks.withType(JavaCompile) {
+	options.compilerArgs += ['-parameters']
+}
