--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,10 @@ spring.mail.host=${MAIL_HOST}
 spring.mail.port=${MAIL_PORT}
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
-spring.mail.protocol=${MAIL_PROTOCOL}
-spring.mail.properties.mail.smtp.auth=${MAIL_AUTH}
-spring.mail.properties.mail.smtp.starttls.enable=${MAIL_STARTTLS_ENABLE}
-spring.mail.properties.mail.smtp.starttls.required=${MAIL_STARTTLS_REQUIRED}
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 
 
 # Frontend URL
