--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'com.h2database:h2'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	// https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44
 	implementation("com.cloudinary:cloudinary-http44:1.39.0")
