--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,4 +29,7 @@ CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
 CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
 CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
 
-
+# PayPal Configuration
+app.paypal.client-id=${PAYPAL_CLIENT_ID}
+app.paypal.client-secret=${PAYPAL_CLIENT_SECRET}
+app.paypal.mode=${PAYPAL_MODE}
