--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,9 @@ implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M6'
 	//WebSocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	
+	// PayPal SDK
+	implementation 'com.paypal.sdk:rest-api-sdk:1.14.0'
     
 }
 
