--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,40 @@ CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
 app.paypal.client-id=${PAYPAL_CLIENT_ID}
 app.paypal.client-secret=${PAYPAL_CLIENT_SECRET}
 app.paypal.mode=${PAYPAL_MODE}
+
+# Chat Options
+spring.ai.openai.chat.options.temperature=0.3
+spring.ai.openai.chat.options.topP=0.9
+
+# spring.ai.openai.chat.options.responseFormat.type=JSON_SCHEMA
+# spring.ai.openai.chat.options.responseFormat.schema=classpath:schemas/answer-schema.json
+
+# Retry
+spring.ai.retry.max-attempts=2
+spring.ai.retry.backoff.initial-interval=600ms
+spring.ai.retry.backoff.multiplier=2
+spring.ai.retry.backoff.max-interval=2s
+# Log mức vừa phải
+logging.level.org.springframework.ai=INFO
+logging.level.org.springframework.ai.openai.client.OpenAiClient=DEBUG
+
+# Database Optimization Settings
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.connection.isolation=READ_COMMITTED
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+
+# HikariCP Connection Pool Settings
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.leak-detection-threshold=60000
+
+# Transaction Settings
+spring.jpa.properties.hibernate.transaction.timeout=30
+spring.transaction.default-timeout=30
+
