update api ingredient and menu meal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,9 @@ app.frontend.url=${FRONTEND_URL}
 CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
 CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
 CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
-
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+# spring.servlet.multipart.max-file-count=1
 # PayPal Configuration
 app.paypal.client-id=${PAYPAL_CLIENT_ID}
 app.paypal.client-secret=${PAYPAL_CLIENT_SECRET}
