Add scan cart when user have 1 or more menu in cart. Send mail to user after  scan

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,3 +72,10 @@ spring.datasource.hikari.leak-detection-threshold=60000
 spring.jpa.properties.hibernate.transaction.timeout=30
 spring.transaction.default-timeout=30
 
+# Email Scheduler Configuration
+app.email.scheduler.enabled=true
+app.email.scheduler.pool-size=5
+app.email.scheduler.morning-time=09:00
+app.email.scheduler.evening-time=18:00
+app.email.scheduler.frequency-hours=2
+
