add endpont for mobile login

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 DB_URL=
 DB_USERNAME=
 DB_PASSWORD=
-API_KEY=
 ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRATION_MS=
 REFRESH_TOKEN_SECRET=
@@ -13,3 +12,9 @@ MAIL_PORT=
 FRONTEND_URL=
 OPENAI_API_KEY=
 OPENAI_MODEL=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
+PAYPAL_MODE=
