--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+
+# Cache Configuration
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=5m
 app.accessTokenSecret=${ACCESS_TOKEN_SECRET}
 app.accessTokenExpirationMs=${ACCESS_TOKEN_EXPIRATION_MS}
 app.refreshTokenSecret=${REFRESH_TOKEN_SECRET}
