Update promt for AI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,8 +73,11 @@ spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.leak-detection-threshold=60000
 
 # Transaction Settings
-spring.jpa.properties.hibernate.transaction.timeout=30
-spring.transaction.default-timeout=30
+spring.jpa.properties.hibernate.transaction.timeout=60
+spring.transaction.default-timeout=60
+
+# AI Function Calling Timeout
+spring.ai.openai.chat.options.timeout=45s
 
 # Email Scheduler Configuration
 app.email.scheduler.enabled=true
